# enhance_ocod

./: .gitignore  Analysing the ocod dataset.ipynb  Full process testing script.ipynb  LICENSE  Locating and classifying the ocod dataset.ipynb  London_empty_homes.Rmd  Offshore_airbnb_cleaning.Rmd  README.md  Unit tag and span cleaning.ipynb  address_parsing_helper_functions.py  analysis.py  base_cpu_config.cfg  bert_utils.py  clean_test_and_dev_sets.ipynb  config.py  create_leaflet_maps.Rmd  data_utils.py  download_hist.py  expanding tagged addresses.ipynb  expanding_tagged_addresses.ipynb  exploratory_analysis.ipynb  finetune_gliner.ipynb  full_ocod_parse_process.py  gliner_train.py  helper_functions.py  hl_programmatic_helpers.py  import-functions.py  inference.py  inference_utils.py  leaflet_script.Rmd  locate_and_classify_helper_functions.py  locating_and_classifying_the_ocod_dataset.ipynb  look_at_performance.ipynb  main (copy).py  mbert_train.py  new_price_paid_process.ipynb  ocod_districts.csv  ocod_inference.py  offshore_classification.ipynb  pre_processing_funcs.py  (+15 more)
.ipynb_checkpoints/: Analysing the ocod dataset-checkpoint.ipynb  Unit tag and span cleaning-checkpoint.ipynb  expanding tagged addresses-checkpoint.ipynb  offshore_classification-checkpoint.ipynb  using_deepparse-checkpoint.ipynb
address_generator/: address_generator.py  address_generator_config.yaml  names.yaml  status.md  synthetic_addresses.json  test_script.py
data/: sample_incomplete_data.p  sample_incomplete_data_new_prediction_tags.p  test_sample_data.p  test_sample_data_new_prediction_tags.p
dockerfile/: Dockerfile  Readme.md  sample.py
enhance_ocod/: address_parsing_helper_functions.py
experimental_scripts/: Spacy testing.ipynb  deepparse_try.ipynb  testing_libpostal.Rmd
functions/: aggregate_unit_values.R  aggregated_monte_carlo.R  calc_all_unconventional.R  create_sampled_vector.R  monte_carlo_stratified_dataset.R  process_airnbnb_data.R
gliner/: data_utils.py  train.py
humanloop_1_2/: hlprogrammatic_helpers.py  main.py  (+1 more)
(+202 files in other folders)
