[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "enhance_ocod"
version = "0.2.0"
authors = [
    {name = "Jonathan Bourne"},
]
description = "A package for working with the OCOD (Overseas companies that own property in England and Wales ) dataset"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pandas",
    "numpy", 
    "transformers",
    "accelerate",
    "seqeval",
    "datasets",
    "scikit-learn",  # for sklearn.metrics
    "torch",
    "tqdm",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.uv]
dev-dependencies = [
    "build",
    "twine",
]


[dependency-groups]
dev = [
    "pytest>=7.0",
]

[project.urls]
"Homepage" = "https://github.com/JonnoB/enhance_ocod"
"Bug Tracker" = "https://github.com/JonnoB/enhance_ocod/issues"
